backend/backend_debug.log

> backend@1.0.0 dev
> nodemon server.js

[33m[nodemon] 3.1.11[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: js,mjs,cjs,json[39m
[32m[nodemon] starting `node server.js`[39m
file:///D:/client/Api-billing/backend/routes/serviceRoutes.js:3
import { protect, adminOnly, superAdminOnly } from "../middleware/authMiddleware.js";
                  ^^^^^^^^^
SyntaxError: The requested module '../middleware/authMiddleware.js' does not provide an export named 'adminOnly'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:369:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:691:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.11.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
Cron Jobs Scheduled: Monthly Report (0 0 1 * *)
Server running on port 5000
MongoDB Connected
POST /api/services called with: { name: 'ghghr', description: 'erb', baseRate: 0.01 }
Service created: {
  name: 'ghghr',
  description: 'erb',
  baseRate: 0.01,
  isActive: true,
  _id: new ObjectId('6995f951bad15dfb84b52a99'),
  createdAt: 2026-02-18T17:39:29.172Z,
  __v: 0
}
User created: vedanshsinghal62@gmail.com, OTP: 364387
Mock Email Sent:
To: vedanshsinghal62@gmail.com
Subject: Verify your email
Body: Your OTP is: 364387
